--- a/OopGame/OopGame.csproj
+++ b/OopGame/OopGame.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DragRacingGameLib\DragRacingGameLib.csproj" />
+  </ItemGroup>
+
 </Project>
